set overflow: clip to prevent border radius overlap

--- a/src/components/video/video-placeholder.module.scss
+++ b/src/components/video/video-placeholder.module.scss
@@ -107,6 +107,7 @@
 	position: relative;
 	background-size: cover;
 	background-position: center;
+	overflow: clip;
 
 	&:not(:first-child) {
 		margin-top: 0;
